# qdrant-service

./: .gitignore  Dockerfile  README.md  api.http  docker-compose.yml  nohup.out  pyproject.toml  requirements.txt  start-service.sh
app/: chunking.py  config.py  embeddings.py  index_all.py  ingest.py  main.py  qdrant_service.py  schemas.py  tracker.py
config/: config.yml
scripts/: index_all.py  uv_build.sh  uv_sync.sh
tests/: test_chunking_merge.py  test_embeddings.py
