[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qdrant-service"
version = "0.1.0"
description = "Qdrant indexing and search service (FastAPI)"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.95.2",
    "uvicorn[standard]>=0.22.0",
    "pyyaml>=6.0",
    "qdrant-client==1.16.2",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.1.0",
    "httpx>=0.24.1",
    "ollama>=0.6.1",
]

[tool.uv]
managed = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
